<resources>
    <string name="app_name">Lekhpal Sangh</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="lekhpal_sangh_button">Lekhpal Sangh</string>
    <string name="khatauni_button">Khatauni</string>
    <string name="edistrict_button">eDistrict</string>
    <string name="government_portal_button">Online Government Services</string>
    <string name="lekhpal_sangh_news_button">Lekhpal Sangh News</string>
    <string name="contact_button">Contacts</string>


    <string name="title_activity_second">Interstitial</string>
    <string name="interstitial_ad_sample">Watch more by clicking on next level</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="btn_fullscreen_ad">Show Fullscreen Ad</string>

    <!-- AdMob ad unit IDs -->
    <string name="interstitial_ad_unit_id">ca-app-pub-5687919180687585/9680500352</string>
    <string name="banner_ad_unit_id">ca-app-pub-5687919180687585/6756203553</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="lekhpal_title"><h3>उत्तर प्रदेश लेखपाल संघ</h3></string>
    <string name="lekhpal_message"><h4>This application gives the information about its member and union. This is also helpful for the public so that they can get proper information about revenue relate work and government . The important information about Uttar pradesh Lekhpal Sangh is also available in this portal. The important Government orders and other public related information is also available on this portal.</h4></string>
    <string name="lekhpal_contact_us"><h3>श्री राम मूरत यादव  ( अध्यक्ष ) \n उत्तर प्रदेश लेखपाल संघ \n \n श्री  ब्रजेश कुमार श्रीवास्तव ( महामंत्री )\n उत्तर प्रदेश लेखपाल संघ \n  \n Head Office : \n Aalam Bagh , Infront Of Road Ways Bus Station,\nSujan Pura , Om Nagar ,Lucknow  U.P \n\nEmails : -\n mailto.lekhpalsangh@gmail.com\n lekhpal.up@gmail.com \n netsolutionst@gmail.com</h3></string>


    <string name="enter_btn"><h3>Enter</h3></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Name</string>
    <string name="pref_title_display_email">Email ID</string>
    <string name="pref_default_display_name">Lekhpal Sangh</string>
    <string name="pref_default_display_email">lekhpal.up@gmail.com</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_notification">Notification</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_Reset_password">Reset Password</string>
    <string name="title_activity_signup">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_Register_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_link_to_register">Register</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_profile">Profile</string>

</resources>