<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.co.lekhpal.lekhpalsangh.SecondActivity">


    <!-- view for AdMob Interstitial Ad -->
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interstitial_ad_sample"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_above="@+id/level"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_level"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_above="@+id/next_level_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp" />

    <Button
        android:id="@+id/next_level_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/next_level" />
</RelativeLayout>
